opam-version: "2.0"
name: "flocq-quickchick"
version: "~dev"
synopsis: "Flocq binary_float generators for QuickChick testing framework"
maintainer: "Yaroslav Kogevnikov <ykozhevnikov@codeminders.com>"
authors: "Yaroslav Kogevnikov <ykozhevnikov@codeminders.com>"
license: "MIT"
depends: [
  "coq" {>= "8.8.2"}
  "coq-quickchick"
  "coq-flocq"
]
build: make
install: [make "install"]
url {
  src: "https://github.com/digamma-ai/flocq-quickchick.git"
}
